
syntax = "proto3";

package common;

option go_package = "github.com/huydq/gen-go/common;com";
option optimize_for = CODE_SIZE;

enum KErrorCode {
  ERR_DEFAULT = 0;

  // Common data 400-xxx
  ERR_BAD_REQUEST = 400000;
  ERR_BIND_DATA = 400001;
  ERR_DATA_INVALID = 400002;
  ERR_BAD_WORD = 400003;
  ERR_NEED_RETRY = 400004;
  ERR_API_MISSING_PARAM = 400005;
  ERR_API_PARAM_OUT_OF_RANGE = 400006;
  ERR_DUPLICATE_RECORD = 400007;
  
  // TOKEN 403-01x
  ERR_NON_K_CLIENT = 403000;
  ERR_AUTH_TOKEN_INVALID = 403010;
  ERR_REFRESH_TOKEN_INVALID = 403011;
  ERR_NEED_NEW_TOKEN = 403012;
  ERR_TOKEN_LOCATION_WAS_CHANGED = 403013;
  ERR_AUTH_TOKEN_EXPIRED = 403014;

  // 3RD APP 403-02x
  ERR_UNKNOW_APP3RD = 403020;
  ERR_APP3RD_ID_INVALID = 403021;
  ERR_APP3RD_ID_NOT_MATCH = 403022;
  ERR_APP3RD_API_KEY_INVALID = 403023;
  ERR_APP3RD_URI_INVALID = 403024;
  
  // PERMISSION 403-03x
  ERR_REDIRECT_URI_NOT_ALLOWED = 403030;
  ERR_GRANT_TYPE_INVALID = 403031;
  ERR_CLIENT_REACH_MAX_CONNECT_SESSION = 403032;
  ERR_CLIENT_ID_INVALID = 403033;
  ERR_REACH_MAX_CLIENT_ID = 403034;
  ERR_IP_REACH_MAX_LIMIT = 403035;
  ERR_ROLE_EXISTED = 403036;
  ERR_PERMISSION_INVALID = 403037;

  // AUTH SESSION  401-xxx
  ERR_AUTHORIZE = 401000;
  ERR_UNAUTHORIZED_USER = 401001;
  ERR_USER_LOGGED_IN_SESSION_TIME_OUT = 401002;
  ERR_AUTHORIZE_CODE_INVALID = 401003;
  ERR_AUTHORIZE_CODE_EXPIRED = 401004;
  ERR_SESSION_EXPIRED = 401005;
  ERR_USER_NOT_ALLOW = 401006;

  // Auth 400-0[123]x
  ERR_USERNAME_INVALID = 400010;
  ERR_USERNAME_OCCUPIED = 400011; // already in use
  ERR_EMAIL_INVALID = 400012;
  ERR_EMAIL_OCCUPIED = 400013; // already in use
  ERR_EMAIL_ACTIVED = 400014;
  ERR_PHONE_INVALID = 400015;
  ERR_PHONE_OCCUPIED = 400016; // already in use
  ERR_PHONE_ACTIVED = 400017;
  ERR_NAME_INVALID = 400018;
  ERR_USER_NOT_FOUND = 400019;
  ERR_USER_LOCKED = 400020;
  ERR_USER_NOT_ACTIVED = 400021;
  ERR_USER_ACTIVED = 400022;
  ERR_USER_BANNED = 400023;
  ERR_LOGIN_INFO_INVALID = 400030;
  ERR_WRONG_PASSWORD = 400031;
  ERR_PASSWORD_EXPIRED = 400032;
  ERR_RESET_CODE_INVALID = 400033;
  ERR_RESET_CODE_EXPIRED = 400034;
  ERR_CHANGE_SAME_PASSWORD = 400035;

  // RESOURCE 400-05x
  DATA_NOT_FOUND = 400051;
  RESOURCE_NOT_FOUND = 400052;

  // REDEEM POINT ERROR
  ERR_PRODUCT_REDEEM_BALANCE_AV_NOT_ENOUGH = 400061;
  ERR_PRODUCT_REDEEM_BALANCE_NOT_ENOUGH = 400062;
  ERR_CURRENCY_RATE_NOT_FOUND = 400063;
  ERR_BALANCE_NOT_ENOUGH = 400064;

  // ----------------------------------------------------------------
  // SERVER SIDE ERROR
  ERR_OTHER = 500000;
  ERR_CONNECT = 500001;
  ERR_SAVE_DATA = 500002;
  ERR_RETRIEVE_DATA = 500003;
  ERR_NOT_FOUND = 500004;
  ERR_GET_USER_INFO = 500005;
  ERR_DELETE_DATA_FROM_CACHE = 500006;
  ERR_NOTIFY_TOO_MUCH = 500007;
  ERR_NOT_IMPLEMENTED = 500008;
  ERR_DATABASE_ERROR = 500009;
  ERR_ADD_NEW_VERSION = 500020;
  ERR_VERSION_EXISTED = 500021;
  ERR_VERSION_NOT_EXISTED = 500022;
  ERR_VERSION_NOT_RELEASED = 500023;
  ERR_UNMARSHAL_JSON = 500030;
  ERR_ID_ALREADY_NOTIFIED = 500040;
  ERR_ID_ALREADY_SCHEDULE = 500041;
  ERR_SCHEDULE_INVALID = 500042;
  ERR_EXTRACT_FILE = 500043;
  ERR_REDIS_RUNTIME = 500044;
  ERR_CREATE_ACCOUNT = 500045;
  ERR_CREATE_TOKEN = 500046;
  ERR_RESET_PASSWORD = 500047;
  ERR_CREATE_EMAIL = 500048;
  ERR_SERVER_CONFIG = 500060;
  ERR_SERVER_LOGIC = 500070;
  ERR_CONNECT_LOCAL_SERVICE = 500080;
  ERR_INTERNAL = 500999;

  // ----------------------------------------------------------------
  // PRODUCT Service ERROR 5002xx
  ERR_PRODUCT_NOT_FOUND = 500201;
  ERR_PRODUCT_PRICE_NOT_FOUND = 500202;
  ERR_PRODUCT_REDEEM_QUANTITY_TOO_BIG = 500203;
  ERR_SERVICE_PROVIDER_NOT_FOUND = 500204;
  ERR_PRODUCT_USER_ALREADY_IN_ANOTHER_REDEEM_PROCESS = 500205;
  ERR_CREATE_ORDER_FAILED  = 500206;
  ERR_PRODUCT_SHIP_FAILED = 500207;
  ERR_PRODUCT_UPDATE_ORDER_STATUS = 500208;
  ERR_REDEEM_POINT_FAILED = 500209;
  ERR_PRODUCT_MODEL_INVALID = 500210;
  ERR_PRODUCT_NOT_ENOUGH_QUANTITY = 500211;
  ERR_PRODUCT_INVALID_TRANSACTION_STEP = 500212;
  ERR_PRODUCT_VOUCHER_EXPIRED = 500213;
  
  // ----------------------------------------------------------------
  // PRODUCT Service ERROR 4002xx
  ERR_PRODUCT_CATEGORY_NOT_FOUND = 400315;
  ERR_PRODUCT_DUPLICATE_RECORD = 400316;
  ERR_INVENTORY_PRODUCT_NOT_FOUND = 400317;
  ERR_INVENTORY_NOT_FOUND = 400318;
  ERR_PRODUCT_CONTENT_NOT_FOUND = 400319;
  ERR_INVENTORY_PRODUCT_ITEM_NOT_FOUND = 400320;
  ERR_PRODUCT_DISCOUNT_NOT_FOUND = 400321;
  ERR_PRODUCT_MEDIA_NOT_FOUND = 400322;
  ERR_PRODUCT_CONFIG_NOT_FOUND = 400323;
  ERR_BRAND_NOT_FOUND = 400324;
  ERR_CATEGORY_NOT_FOUND = 400325;

  // ----------------------------------------------------------------
  // Gamification Service ERROR 502xxx
  ERR_NOT_ENOUGH_SPINS = 500301;
  ERR_NUM_REWARD_HAS_RUN_OUT = 500302;
  ERR_RERWARD_FRAUD_DETECTED = 500303;

  // ----------------------------------------------------------------
  // IAM Service ERROR 400xxx
  ERR_OTP_RESEND_LOCKED = 400101;
  ERR_OTP_LOCKED = 400102;
  ERR_OTP_INVALID = 400103;
  ERR_OTP_EXPIRED = 400104;

  // ----------------------------------------------------------------
  // Order Service ERROR 4002xx
  ERR_ORDER_INVALID_BODY = 400200;
  ERR_ORDER_USER_NOT_FOUND = 400201;
  ERR_ORDER_PRODUCT_NOT_FOUND = 400202;
  ERR_ORDER_UPDATE_ORDER_FAILED = 400203;
  ERR_ORDER_CREATE_ORDER_FAILED = 400204;
  ERR_ORDER_REDEEM_BALANCE_NOT_ENOUGH = 400205;
  ERR_ORDER_REDEEM_BALANCE_FAILED = 400206;
  ERR_ORDER_PRODUCT_CHECKOUT_FAILED = 400207;
  ERR_ORDER_PRODUCT_DEDUCT_FAILED = 400208;
  ERR_ORDER_SUBMIT_FAILED = 400209;
  ERR_ORDER_PRODUCT_CHECKOUT_REVERT_FAILED = 400210;
  ERR_ORDER_REDEEM_BALANCE_REVERT_FAILED = 400211;
  ERR_ORDER_PRODUCT_DEDUCT_REVERT_FAILED = 400212;
  ERR_ORDER_SUBMIT_ROLLBACK_FAILED = 400213;
  ERR_ORDER_GET = 400214;
  ERR_ORDER_COMPLETE_VALIDATE = 400215;
  ERR_ORDER_NOT_FOUND = 400216;
  ERR_ORDER_COMPLETE_CAMPAIN = 400217;
  ERR_ORDER_VERIFY = 400218;
  ERR_ORDER_CALLBACK = 400219;
  ERR_ORDER_GET_PAYMENT_URL = 400220;
}