syntax = "proto3";

package common.v2;

option go_package = "github.com/huydq/gen-go/common/v2;comm";
option optimize_for = CODE_SIZE;

message ApiError {
  int32 code = 1;
  int32 error_code = 2;
  string message = 3;
  int32 wait_for = 4;
}
